- more translations (personal weapons, species page, other misc. fields)

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -259,6 +259,8 @@
     "Page.title.smallCraftStats": "Small Craft Stats",
     "Page.title.spaceframeOption": "Spaceframe Option",
     "Page.title.spaceframeSelection": "Spaceframe",
+    "Page.title.species": "Species",
+    "Page.title.speciesDetails": "Species Details",
     "Page.title.starshipTalentSelection": "Starship Talents",
     "Page.title.starshipTypeSelection": "Starship Type",
     "Page.title.starshipWeaponsSelection": "Starship Weapons",
@@ -460,6 +462,37 @@
     "Value.otherTraining.text": "The character gains a single Value, which should reflect some aspect of the character’s beliefs that developed during their Training.",
 
     "Value.final.text": "The character receives one final Value. This might reflect the Career Events rolled in Step Six, or it may represent some other element of the character. This Value might be a relationship, connecting the character to another character in the crew, or to another organization or culture in some way.",
+
+    "Weapon.common.name": "Name/Type",
+    "Weapon.common.qualities": "Qualities",
+
+    "Weapon.personal.phaser2.name": "Phaser type-2",
+
+    "Weapon.personal.strike.name": "Unarmed Strike",
+
+    "Weapon.personal.batleth.name": "Bat'leth",
+
+    "Weapon.personal.dktahg.name": "d’k tahg dagger",
+
+    "Weapon.personal.ushaantor.name": "Ushaan-tor",
+
+    "Weapon.personal.disruptor.name": "Disruptor Pistol",
+
+    "Weapon.quality.knockdown.name": "Knockdown",
+
+    "Weapon.quality.charges.name": "Charges",
+
+    "Weapon.quality.vicious.name": "Vicious {{rank}}",
+
+    "Weapon.quality.deadly.name": "Deadly",
+
+    "Weapon.quality.hidden.name": "Hidden {{rank}}",
+
+    "Weapon.quality.piercing.name": "Piercing {{rank}}",
+
+    "Weapon.quality.intense.name": "Intense",
+
+    "Weapon.quality.area.name": "Area",
 
     "World.attribute.designation": "Designation",
     "World.attribute.classification": "Classification",
