--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -376,6 +376,7 @@ MilestoneType.name.arcMilestone,Arc Milestone,Handlungsbogen-Meilenstein,,Jalon 
 NpcType.minor.name,Minor NPC,,,
 NpcType.notable.name,Notable NPC,,,
 NpcType.major.name,Major NPC,,,
+StarSystem.common.coordinates,Coordinates,,,
 StarSystem.common.innerZone,Inner Zone,,,
 StarSystem.common.ecosphere,Ecosphere,,,
 StarSystem.common.outerZone,Outer Zone,,,
@@ -389,6 +390,7 @@ Value.otherTraining.text,"The character gains a single Value, which should refle
 Value.final.text,"The character receives one final Value. This might reflect the Career Events rolled in Step Six, or it may represent some other element of the character. This Value might be a relationship, connecting the character to another character in the crew, or to another organization or culture in some way.",,,
 Weapon.common.name,Name/Type,,,
 Weapon.common.qualities,Qualities,,,
+Weapon.personal.phaser1.name,Phaser type-1,,,
 Weapon.personal.phaser2.name,Phaser type-2,,,
 Weapon.personal.strike.name,Unarmed Strike,,,
 Weapon.personal.batleth.name,Bat'leth,,,
