initial work to support exporting a character in a format that can be imported into FoundryVTT

--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -514,7 +514,7 @@
     "World.attribute.classification": "Classification",
     "World.attribute.notes": "Notes",
     "World.attribute.orbitalRadius": "Rayon Orbital",
-    "World.attribute.orbitalPeriod": "Periode Orbital",
+    "World.attribute.orbitalPeriod": "Periode Orbitale",
     "World.attribute.eccentricity": "Eccentricité",
     "World.attribute.diameter": "Diametre",
     "World.attribute.density": "Densité",
@@ -527,7 +527,7 @@
     "World.attribute.tidallyLocked": "Rotation synchrone",
     "World.attribute.retrograde": "Retrograde",
     "World.attribute.axialTilt": "Inclinaison Axiale",
-    "World.attribute.waterCoverage": "Water Coverage",
+    "World.attribute.waterCoverage": "Couverture Hydrique",
     "World.attribute.ring": "Anneau",
     "World.attribute.beltWidth": "Largeur de la Ceinture",
     "World.attribute.predominantSize": "Taille Predominante",
