--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -144,6 +144,7 @@
     "Common.button.selectAll": "Select All",
     "Common.button.selectNone": "Select None",
     "Common.button.exportJson": "Export to JSON",
+    "Common.button.exportVtt": "Export for VTT",
     "Common.button.exportPdf": "Export to PDF",
     "Common.button.ok": "OK",
     "Common.button.add": "Add",
