add additional Foundry details; - minor tweaks on starship sheets; - minor NPC revisions

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -159,6 +159,8 @@
     "Common.text.select": "Select",
     "Common.text.selectOne": "Select one",
     "Common.text.total": "Total",
+    "Common.text.yes": "Yes",
+    "Common.text.no": "No",
 
     "Common.select.choose": "Choose...",
 
