- add Lower Decks source

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -314,6 +314,7 @@
     "Source.book.discoveryCampaign": "Discovery Campaign",
     "Source.book.picardS1": "Picard S1",
     "Source.book.utopiaPlanitia": "Utopia Planitia",
+    "Source.book.lowerDecksCampaign": "Lower Decks",
 
     "Era.name.enterprise": "Enterprise (22nd century)",
     "Era.name.originalSeries": "Original Series (23rd century)",
