--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -280,6 +280,7 @@ Source.book.discoveryS1S2,Discovery S1/S2,(NOT YET TRANSLATED),,Discovery S1/S2
 Source.book.discoveryCampaign,Discovery Campaign,(NOT YET TRANSLATED),,Campagne Discovery
 Source.book.picardS1,Picard S1,(NOT YET TRANSLATED),,Picard S1
 Source.book.utopiaPlanitia,Utopia Planitia,(NOT YET TRANSLATED),,Utopia Planitia
+Source.book.lowerDecksCampaign,Lower Decks,,,
 Era.name.enterprise,Enterprise (22nd century),Enterprise (22. Jahrhundert),,Enterprise (22ème Siècle)
 Era.name.originalSeries,Original Series (23rd century),Originalserie (23. Jahrhundert),,Serie Originale (23ème Siècle)
 Era.name.nextGeneration,Next Generation (24th century),Das Nächste Jahrhundert (24. Jahrhundert),,Nouvelle Génération (24ème Siècle)
