--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -440,6 +440,7 @@
     "AlliedMilitaryType.name.bajoranMilitia": "Bajoran Militia",
     "AlliedMilitaryType.name.cardassianUnion": "Cardassian Union",
     "AlliedMilitaryType.name.dominion": "Dominion",
+    "AlliedMilitaryType.name.ferengiMilitary": "Ferengi Military",
     "AlliedMilitaryType.name.other": "Other",
 
     "ModificationType.name.reputation": "Reputation",
