Additional changes, per #153: add some translation and bootstrap display stuff

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -198,6 +198,7 @@
     "Construct.other.scale": "Scale",
     "Construct.other.serviceDate": "Service Date",
     "Construct.other.shields": "Shields",
+    "Construct.other.sources": "Sources",
     "Construct.other.spaceFrame": "Space Frame",
     "Construct.other.specialRules": "Special Rules",
     "Construct.other.species": "Species",
@@ -205,6 +206,7 @@
     "Construct.other.systems": "Systems",
     "Construct.other.talent": "Talent",
     "Construct.other.talents": "Talents",
+    "Construct.other.talentOptions": "Talent Options",
     "Construct.other.training": "Training",
     "Construct.other.trait": "Trait",
     "Construct.other.traits": "Traits",
